--- a/themes/tranquility/layout/_partials/layout.njk
+++ b/themes/tranquility/layout/_partials/layout.njk
@@ -99,9 +99,15 @@
     {% include "./components/foot.njk" %}
     {% if theme.mathjax %}
       <script src="https://unpkg.com/js-polyfills@0.1.43/es6.js"></script>
+      <script>
+        MathJax = {
+          tex: {
+            inlineMath: [['$', '$'], ['\\(', '\\)']]
+          }
+        };
+      </script>
       <script id="MathJax-script"
-              async
-              src="https://www.unpkg.com/mathjax@3.2.2/es5/tex-mml-chtml.js"></script>
+src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     {% endif %}
     {% if theme.search.enable %}
       <script src="{{url_for('js/search.js')}}"></script>
