chore: 首页元素优化

--- a/themes/tranquility/source/css/index.styl
+++ b/themes/tranquility/source/css/index.styl
@@ -110,7 +110,7 @@ for item in hexo-config('timeline.items') {
   }
 }
 
-.normal-eqt {
+.index-eqt {
   position: absolute;
   top: calc(50% + 100px);
   right: 50%;
@@ -505,7 +505,7 @@ for v, k in timeline_colors {
     width: 300px;
   }
 
-  .normal-eqt {
+  .index-eqt {
     bottom: 14%;
     left: 40%;
     top: auto;
