--- a/themes/tranquility/layout/index.njk
+++ b/themes/tranquility/layout/index.njk
@@ -18,20 +18,13 @@
     <div class="wall-bg">
       <div class="wall-bg-index">
         <div class="hello-world">
-          <div>> Hello world</div>
+          <div> import torch </div>
           <div class="cursor"></div>
         </div>
-        <div class="normal-eqt">
-          <img alt="normal" width="300px" height="" src="{{ url_for("/images/normal.svg") }}"/>
+        <div class="index-eqt">
+          <img alt="Euler's identity" width="300px" height="" src="{{ url_for("/images/euler.svg") }}"/>
         </div>
         <canvas width="400" height="400" id="heart-curve"></canvas>
-        <div class="motto">{{ theme.index.motto }}</div>
-        <div class="poem">
-          {% for line in theme.index.poem %}
-            {{ line }}
-            <br/>
-          {% endfor %}
-        </div>
       </div>
     </div>
   </div>
